Fixing spacing in search results

--- a/assets/styles/src/templates/_page.scss
+++ b/assets/styles/src/templates/_page.scss
@@ -19,10 +19,17 @@
 } // .template-page
 
 .page {
-    
     .article__content {
 	min-height: 450px;
     }
+}
+
+.search-results {
+	.page {
+		.article__content {
+		min-height: 450px;
+		}
+	}
 }
 
 .table-container
